--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,3 +4,257 @@
     box-sizing: border-box;
     font-size: 16px;
 }
+
+@import 'config';
+
+// Base Styles
+
+.header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: lighten($secondary-color, 10%);
+    width: 100%;
+    padding: 1rem 6rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 10;
+
+    &__link{
+        text-decoration: none;
+        font-size: 2rem;
+        font-family: $primary-font;
+        color: $primary-color;
+        letter-spacing: 2px;
+    }
+
+    &__mobile{
+        display: none;
+    }
+
+    &__navigation ul{
+        display: flex;
+
+        li{
+            list-style: none;
+            margin-left: 1.5rem;
+
+            a{
+                text-decoration: none;
+                color: $primary-color;
+                font-family: $primary-font;
+                transition: .35s ease;
+
+                &:hover,
+                &:focus{
+                    color: darken($primary-color, 20%);
+                }
+            }
+        }
+    }
+}
+
+// Mobile Navigation 
+.mobile{
+    display: none;
+}
+
+// Hero section 
+.hero{
+    @include flexCenter();
+    min-height: 100vh;
+    background-image: linear-gradient(to bottom, hsla(256, 25%, 20%, 0.459)), url("../images/hero-bg-desktop.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    &__title{
+        font-size: 3rem;
+        font-family: $primary-font;
+        letter-spacing: 2px;
+        color: $primary-color;
+        margin-bottom: 1rem;
+    }
+
+    &__link{
+        text-decoration: none;
+        padding: .5rem 1rem;
+        border: 1px solid $secondary-color;
+        color: $primary-color;
+        background: $secondary-color;
+        text-transform: uppercase;
+        font-family: $secondary-font;
+        transition: .5 ease-in;
+
+        &:hover{
+            transform: scale(.95);
+        }
+    }
+}
+
+// About us section
+.about{
+    padding: 2rem 6rem;
+
+    &__heading{
+        font-size: 2.5rem;
+        margin-bottom: 2.5rem;
+        text-align: center;
+        font-family: $primary-font;
+        color: $secondary-color;
+    }
+
+    &__block{
+        display: flex;
+        justify-content: space-between;
+        max-width: 100%;
+        flex-wrap: wrap;
+       
+        &-image1,
+        &-text1,
+        &-text2,
+        &-image2{
+            flex-basis: 45%;
+            overflow: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 25rem;
+            margin-bottom: 4rem;
+
+            p{
+                font-size: 1.25rem;
+                font-family: $secondary-font;
+                line-height: 1.5;
+            }
+
+            img{
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        &-image1{
+            flex-basis: 55%;
+            transform: translateX(-8rem); 
+        }
+    }
+}
+
+// Contact section
+.contact{
+    background-image: linear-gradient(to bottom, hsla(256, 25%, 20%, 0.377)), url("../images/contact-bg-desktop.jpg");
+    background-position: center;
+    background-size: cover;
+    padding: 3rem 0;
+    @include flexCenter();
+
+    &__heading{
+        font-size: 2.5rem;
+        margin-bottom: 3rem;
+        text-align: center;
+        font-family: $primary-font;
+        color: $primary-color;
+    }
+
+    &__form{
+        @include flexCenter();
+        align-items: flex-start;
+        padding: 1rem;
+        background: $primary-color;
+
+        &--name,
+        &--email,
+        &--message{
+            padding: .5rem;
+            font-size: .9rem;
+            width: 100%;
+            margin-bottom: 1rem;
+            border: 1px solid $secondary-color;
+            color: $secondary-color;
+            outline: none;
+            font-family: $secondary-font;
+
+            &::placeholder{
+                color: $secondary-color;
+                font-family: $secondary-font;
+            }
+        }
+
+        &--btn{
+            padding: .5rem 1.5rem;
+            color: $primary-color;
+            outline: none;
+            border: 1px solid $secondary-color;
+            background: $secondary-color;
+            font-family: $secondary-font;
+            cursor: pointer;
+            display: block;
+            margin: 0 0 0 auto;
+            transition: .35s;
+
+            &:hover{
+                background: lighten($secondary-color, 10%);
+            }
+        }
+    }
+}
+
+// Footer 
+.footer{
+    padding: 2rem 6rem;
+    background: $secondary-color;
+    color: $primary-color;
+
+    .company{
+        display: flex;
+        justify-content: space-between;
+
+        &__information p{
+            display: flex;
+            align-items: center;
+            margin-bottom: .7rem;
+            font-family: $secondary-font;
+
+            img{
+                margin-right: .5rem;
+                filter: invert(1);
+            }
+        }
+
+        &__links{
+            display: flex;
+
+            ul{
+                margin-right: 1.2rem;
+
+                li{
+                    list-style: none;
+                    margin-bottom: .8rem;
+
+                    a{
+                        text-decoration: none;
+                        color: $primary-color;
+                        font-family: $secondary-font;
+                        transition: .35s;
+
+                        &:hover,
+                        &:focus{
+                            color: darken($primary-color, 20%);
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    hr{
+        margin: 1rem 0;
+    }
+
+    &__copyright{
+        text-align: center;
+        font-family: $secondary-font;
+    }
+}
